syntax = "proto3";

package lnrpc;

service LightningServer {
    rpc SendMany(SendManyRequest) returns (SendManyResponse); 
    rpc NewAddress(NewAddressRequest) returns (NewAddressResponse);
}

message SendManyRequest {
    map<string, uint64> AddrToAmount = 1;
}
message SendManyResponse {
    string txid = 1;
}


message NewAddressRequest {}
message NewAddressResponse {
    string address = 1;
}
